# SpaceTraveller

./: .gitignore  AndroidManifest.xml  README.md
assets/data/: planet_color_records.txt
assets/shader/: galaxy.frag  galaxy.vert  grid.frag  grid.vert  lit.vert  lit_textured.vert  particle.frag  particle.vert  particle_p_s.vert  particle_textured.frag  phong.frag  phong.vert  phong_textured.frag  planet.frag  quad.vert  sun.frag  tex_gen_sun.frag
assets/shader/generator/terrain/: terrain_heightmap_gen.frag  terrain_heightmap_gen.vert
assets/shader/particle/frag/: particle_base.frag  particle_texture.frag
assets/shader/particle/vert/: particle.vert  particle_base.vert  particle_color.vert  particle_scale.vert  particle_solar_system.vert  particle_transform.vert  particle_transform_color.vert
assets/shader/postprocess/: fxaa.frag
assets/shader/terrain/: terrain.frag  terrain.vert
assets/texture/: New Text Document.txt  marble.astc
assets/texture/noise/: space_out.hdr
cpp/: CMakeLists.txt  main.cpp
cpp/Engine/Core/: Core.cpp  Core.h  Input.cpp  Input.h  Timer.cpp  Timer.h  pch.h
cpp/Engine/Math/: Algebra.cpp  Algebra.h  BitOperation.h  RandomValue.cpp  RandomValue.h
cpp/Engine/Memory/: StaticArray.h
cpp/Engine/Modules/Terrain/: TerrainGeometryManager.cpp  TerrainGeometryManager.h
cpp/Engine/Platform/: AppSurface.cpp  AppSurface.h  AssetManager.h  Input.cpp  Input.h
cpp/Engine/Platform/Android/: AndroidApplication.cpp  AndroidApplication.h  AndroidAssetManager.h  AndroidInput.cpp  AndroidInput.h  EglContext.cpp  EglContext.h
cpp/Engine/Platform/Glfw/: GlfwContext.cpp  GlfwContext.h  GlfwInput.cpp  GlfwInput.h
cpp/Engine/Platform/Windows/: WindowsApplication.cpp  WindowsApplication.h  WindowsAssetManager.cpp  WindowsAssetManager.h
cpp/Engine/Precompiled/: pch.h
cpp/Engine/Rendering/: Camera.cpp  Camera.h  DrawCommand.cpp  DrawCommand.h  Entity.cpp  Entity.h  FrameBuffer.cpp  FrameBuffer.h  Gizmo.cpp  Gizmo.h  Graphics.cpp  Graphics.h  GraphicsApi.h  IndexBuffer.cpp  IndexBuffer.h  Particle.h  ParticleSystem.cpp  ParticleSystem.h  RenderBuffer.cpp  RenderBuffer.h  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  StaticMesh.cpp  StaticMesh.h  Texture2D.cpp  Texture2D.h  Vao.cpp  Vao.h  VertexBuffer.cpp  VertexBuffer.h
cpp/Engine/Resource/: AssetManager.cpp  AssetManager.h  MeshData.cpp  MeshData.h  TextureData.cpp  TextureData.h
cpp/Game/: AssetGenerator.cpp  AssetGenerator.h  AsyncTextureGenerator.cpp  AsyncTextureGenerator.h  CameraController.cpp  CameraController.h  Game.cpp  Game.h  OrbitCameraController.cpp  OrbitCameraController.h  ParticleSystem.h  RenderingContext.cpp  RenderingContext.h  Scene.cpp  Scene.h  SceneFrame.cpp  SceneFrame.h  Shader.cpp  Shader.h  Timer.cpp  Timer.h  TranslateCameraController.cpp  TranslateCameraController.h  Universe.cpp  Universe.h
cpp/Game/Scene/: NewParticleScene.cpp  NewParticleScene.h  ObjectScene.cpp  ObjectScene.h  ParticleScene.cpp  ParticleScene.h  PlanetScene.cpp  PlanetScene.h  PlanetSceneTest.cpp  PlanetSceneTest.h  SceneManager.cpp  SceneManager.h  SunSceneTest.cpp  SunSceneTest.h  TerrainSceneTest.cpp  TerrainSceneTest.h  TunnelEffectScene.cpp  TunnelEffectScene.h  UniverseScene.cpp  UniverseScene.h
garbage/: AndroidAssetManager.cpp  Core.cpp  Core.h  NewParticleScene.cpp  ObjectScene.cpp  ObjectScene.h  ParticleScene.cpp  ParticleScene.h  ParticleSystem.cpp  ParticleSystem.h  PlanetScene.h  particle_rotation.vert  particle_rotation_color.vert  particle_scale_color.vert
java/com/example/space/: MainActivity.kt
